# ChangeLog for media-gfx/pngcrush
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/pngcrush/ChangeLog,v 1.129 2014/11/08 03:41:30 radhermit Exp $

*pngcrush-1.7.80 (08 Nov 2014)

  08 Nov 2014; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.80.ebuild:
  Version bump.

*pngcrush-1.7.78 (01 Nov 2014)

  01 Nov 2014; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.78.ebuild:
  Version bump.

*pngcrush-1.7.77 (31 Aug 2014)

  31 Aug 2014; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.77.ebuild:
  Version bump.

  01 Jul 2014; Tim Harder <radhermit@gentoo.org> -pngcrush-1.7.63.ebuild,
  -pngcrush-1.7.66.ebuild, -pngcrush-1.7.67.ebuild, -pngcrush-1.7.69.ebuild,
  -pngcrush-1.7.70.ebuild, -pngcrush-1.7.71.ebuild, -pngcrush-1.7.72.ebuild:
  Remove old.

*pngcrush-1.7.76 (01 Jul 2014)

  01 Jul 2014; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.76.ebuild:
  Version bump.

*pngcrush-1.7.75 (20 Jun 2014)

  20 Jun 2014; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.75.ebuild:
  Version bump.

*pngcrush-1.7.73 (17 Mar 2014)

  17 Mar 2014; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.73.ebuild:
  Version bump.

*pngcrush-1.7.72 (15 Mar 2014)

  15 Mar 2014; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.72.ebuild:
  Version bump.

*pngcrush-1.7.71 (13 Feb 2014)

  13 Feb 2014; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.71.ebuild:
  Version bump.

*pngcrush-1.7.70 (27 Dec 2013)

  27 Dec 2013; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.70.ebuild:
  Version bump.

*pngcrush-1.7.69 (17 Dec 2013)

  17 Dec 2013; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.69.ebuild:
  Version bump.

*pngcrush-1.7.67 (27 Aug 2013)

  27 Aug 2013; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.67.ebuild:
  Version bump.

  19 Jul 2013; Tim Harder <radhermit@gentoo.org> -pngcrush-1.7.41.ebuild,
  -pngcrush-1.7.50.ebuild, -pngcrush-1.7.51.ebuild, -pngcrush-1.7.52.ebuild,