@@ -15,6 +15,8 @@ DIST pngcrush-1.7.78-nolib.tar.xz 58984 SHA256 59bfa327603059ea5db9c3a541df4ed68
 DIST pngcrush-1.7.78.tar.xz 358416 SHA256 5bd6803fc8f359a6e619e59e8fc1d9706788c5b9c4241fd1bba606cf86fec735 SHA512 7ebb0a9797d96e7e44eb044aebf762270512efbede149971d88744af1ff41efe344cb9769209cf4617d1f3a1c111d60775f732c7fe41198904c004839d641ac0 WHIRLPOOL c08a8c9a663ade6204cf11f8927c8d22aea2ff7b0c0efbeb6cdac5915f855949e3e2c2e2daeb0418ca5a7aea7085104c627137784b27e2e1f60b10fab8927bc2
 DIST pngcrush-1.7.80-nolib.tar.xz 59124 SHA256 333d343e6bd893735af5f4ee85f254c02fb5657208faf731a4f24d358eabe386 SHA512 aec9e7c69cb20bde0fcc06db638efbafa45791ba7c6853a0443ee38f34881d312a8d27981c75c0e07864958ef65fec4d99f4b7cafa6afd4cc02d1f6e7de0bef9 WHIRLPOOL ae8c5cfd67bb5b5de32585183fd88c18b5bf09a2d76576f105f65bd517e99faf18fed465b13fe234adb009f0e63236429b31029666c6fa81a74bc2dc7d44734f
 DIST pngcrush-1.7.80.tar.xz 358784 SHA256 db0511b9d713c97b2dab2633385e25aa88aca3036c253c925f0b5692257c5a6d SHA512 2b8f8bc47032d9be65e2cfbc52cac0f9387c702ac72c79e7e7f27815584a8678be553a5f145ae2f39b5e394744ebfd6cc9414365366d01e266aff58b7690391e WHIRLPOOL 6d1151aef50626b411f49adbcf962d58714b5e1708c629a50209a2d242f5ea604afec581a8ad0a39050c4a65e50c221f129f8edeb1340f44c5926775de3efc9f
+DIST pngcrush-1.7.81-nolib.tar.xz 59400 SHA256 37a8d0097b5f1e8eedf99caf2db899b9496a4324bd21a4cfd8d19e69e5047163 SHA512 6539a00f0aa20aaf2553892f181634b8b97751a30516e7b64e4a7e0c4730b0286eb54736db8cc7852a4b721b7ae7665b4d8427bca3023eb3e8a012d53dcb8f67 WHIRLPOOL 75b5cb9dc1f7c49fe97d95b1ad73ea5a78f0c4d481f330eec3e6219bd9a3ae8433badd0076ffba76de7b6664551fb1789d7a9d7b17094da221f795e4dd2b83fb
+DIST pngcrush-1.7.81.tar.xz 359140 SHA256 f9575468941c5e8b406fabcd829b7ed3b9c6bda71b9e78cd1cdc6c088958ecde SHA512 04eb047ad711c49b053649f0ff29640a5df4151c5a96e8e695e045ade06e5ca6f419a8eb989921597f80454438f11503c9487a4fbe33bdc34477f7c20ccb5659 WHIRLPOOL 13f495354d6392675a31cbe77484c87175421c06b2190b09b6dbe2681b7fe54f399ff72ffe1ccf7aaec448ebbe7193c9d34d71446585d8a07e8643ce8fc14c1b
 EBUILD pngcrush-1.7.57.ebuild 964 SHA256 b78328d5d98b73b8413906158d8d4ea318a2fe1b76eff7a4ffb7adcb6d2bc9cb SHA512 f8b1018e36f4f9a8febc9741a462d04c78a28b9b6d45b57bbda36f2a8a0b266382e244032155806d0bfa2e00b91b893d626cbf0be814887d019c1ed100ce01e2 WHIRLPOOL 3eb87c99ba351d7d0c6667e8804379d80522a4233d69d413c028030e739a3586f9757f41745cd8ffab33a10e3360e4d8bbb098c68c747a43fab9f6cd5e659c82
 EBUILD pngcrush-1.7.73.ebuild 971 SHA256 5e2ee691a2661c8f72c1b7f7cec137bbc751b7f5af95d5c3e447ec40e55cb691 SHA512 24ccbdc1a69441b571b0915a2abacfd4fb18096791d7450d569701998fea725af05ef9211628cb96017aae50cb1b971f2b3af5676544c5ffbd8f77631b6984b1 WHIRLPOOL c2ed2dce86b7ec3757f6094ccd300c1e7ca3da4a0eb83569b4fce84322df3303f5d86fa7a3f25f44114db7dda611789e7dfcdfca0bd42df4f08188c02df6bf42
 EBUILD pngcrush-1.7.75.ebuild 971 SHA256 8a5a9bfbde44953f22026b8b640aaa8c2da7451343b6d7c93ab980785dcd94a0 SHA512 72c6d6caecd01480398bdafd57d97f46502e79dbcbc73ee85b851a1f624bbcf0c6545f62952c7a99eafbb823efa6aea72cfb4d755d7aa4d29bd3ab7ae71e455e WHIRLPOOL 268b72b072775f966962373b1bd1a9bf7dfee5a5e31e8e8547eac176975ef614974ef6292b509c33bae386ec12c8613ed132be549a16e292456fd4af52527736
@@ -22,16 +24,17 @@ EBUILD pngcrush-1.7.76.ebuild 971 SHA256 152c7b59c6e07c93f0aa18a591a268c9f651a28
 EBUILD pngcrush-1.7.77.ebuild 971 SHA256 8c128ef78f830f02e61e31fd14f60c26f5c73c031dc2d73b05b4c9209ea7f61f SHA512 96b6e8d12af6b9caa68f16449973905e140908fe497b538b373ac0673bc95f698ba154068ce07f57437c789ecb7c884361c929902c6c69cbb1a112a61538c287 WHIRLPOOL e7ad6ba17448951482bcf5ab9b9bc4b193d2d2b22fb99968b17032f910b206c9fe28d2fc5894faa8c88a441a6be32693c57078836cf1963c103dcfd16263d709
 EBUILD pngcrush-1.7.78.ebuild 971 SHA256 c9904c319bb7d1931ff864a028fdd4a7d10a1cc7d761d5f592a37b1479174ca1 SHA512 8b5aee8fd836d6299e028f81a37f5bcb5627fbb6b032973a1ea270fa3fb7e20ccff1014a142e9f32530452dfb3e7a4dd841be65b3d334997b841ab176099e902 WHIRLPOOL 7f13f2bd5bad1b75e5ae5a31ed121ce76a1168d15df1613cf2e72a8bc8b5460395175f1be81422ea9ce4ac5486ac005d231f0e779be9b19487615a95383beb79
 EBUILD pngcrush-1.7.80.ebuild 971 SHA256 5a0077961f96e518d5118f69e46a783cc444758be5ef6c3fb978f33470003b12 SHA512 613b80571cea97692f921bb2e52750e71c0accbde37dd2407e0ae8d6dbe72237a2b004caef258e055a5c54d18e91b3a66332a82cc84ed9044ff607133547eb76 WHIRLPOOL ad3c70f2a9e3f9c77d541025a54509c78521161da4554246d508fc24812d232b0b4181e847740f2a46ab24b7d78e43da6c010490ce965bb092e5600ce084daad
-MISC ChangeLog 16659 SHA256 828ba532f2e49cfd943a879bd0f94f21c700dea78e8744d63a4e14aa497462c5 SHA512 a46213a8ca9e76d8586b7987000aaaf32255415ba40648284d5468c21a0791c90d71b1aee2cbb860a6498f64a07d7191d66530f72b948b16d6795cae3e44b5b6 WHIRLPOOL 334231f4045ff075ac064c29e990c43f6717494a2ec7f2975ec5ec8d0f3bdc9f4f02fc6f8a22b9f3e5205e8a58ea017e5dea2c30a7e84545469e9c9141fd9011
+EBUILD pngcrush-1.7.81.ebuild 971 SHA256 2df1a7da59dcbf8270665f4772220449b1c6f14774187c7dfc814390a01f4df9 SHA512 6561ad65b8bf2b237615fb337079a226019b0b96b9b3ca814526d331f4632aca73c485614220cff61037ecef5f92e09860c0f843ba6b68b047a433cd279f3c49 WHIRLPOOL ed2f0c1d60ddee0ca01eca93b80c2a3229dc8b136bb48665c99fa125dc24fff85f2797af13fce6dce7de668ac942aac3070d9dbc0d00b18a26a900cb963ac607
+MISC ChangeLog 16782 SHA256 35e34b43fcc80e503b1a071e762b5b42976ac7ef788e604c0b19d6db15a8da85 SHA512 a7ea01182b9e2907ba029a70cda99aa825e9a77f480c796cf56f2a0ac8e243e83bd18944705fabd3c36c5ff1475d4c8133250dbcaf88a6269be07d622bc4bf32 WHIRLPOOL 34c9c4eb18540f243d3779315f47172b89d1e86321c4311dc0de564aa4bbc90de6d04baaf1b6f8977404398b70ec2a09c8aa3265d416f5193ce6e20621cd59d0
 MISC metadata.xml 482 SHA256 a90154b30ac16c421694ea7cb9a914d25cfab2470bc4561e22ffe61dc46339f8 SHA512 1e544bb03733397023506f520aeb45dacdd55fc2b98e9fa735aefd74d1507824ab8677e266bab538fea0423fca0880c186152d6a156e4789750ea38c43abdd91 WHIRLPOOL 4669ff66e12c24527676807d8677941561668613d34318f3a3ee51390deeb190c05bd4a357c763fcb69b3412cc261cdb01e45e42651950a19b2d698352653d7c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUXZDuAAoJEEqz6FtPBkyjZQIH/AjRqoq/4hKIv9RTgcK5Liht
-eWa/BZkN0CCjbeXSVrHcBlMgb/0ejQSXpgvW4EQMERDl28z8vIh+WuCxpQAyMsxC
-+eWzndVpGyf7ncG8QufalVLehVtvA9twKLPezvFLEVNoBSwnwXCaZziNCQ4+qqfE
-pAnJVWrgjQ0k+aSpiaTD3ZQvHE7bXfPzvO9SPIo6Ex2cFvpF9y8oUGGH6PYB07zm
-eMOpH460wlaaHDfSo2WOWG3uBs0nK14yNeZKc9NydoZFXqlmfjY9ygzDBwSyJeC+
-sMKo39Gp8QJXWjp04Mg8Os27y9zaAiNH937+ODxJei4dedA94Ju9NsykpCiv4lQ=
-=e/0H
+iQEcBAEBCAAGBQJUdteCAAoJEEqz6FtPBkyjUaYH/j9X+AOhw/bNHqsHeLFzPWj6
+8l8p9g+u6gMv0HWfzbie1rmSi/qets530/YxWMvf9Fzk4D8DFmgekfutLDCTaJYw
+iT+aavsc1JtD78BUCfe0tfe/KsEic8GZWmdkkLD6O4E8r8A0DKB94qapcrxbpPbl
+4FaYDqTz+7YkfImBGszBNkq8xeUDTGWTK+ENH367tBLi2knCCyuLWpY8yE/pr0xa
+v8TLoTwggdkPtEqxdSrjZJb9jMzOfhMsu6eJp+urITaD+CeRbSp5JHZYiOew8//N
++x6Ko6brvH05NuCEhsnLLJvUB1NFe76j3rTfwHUfrEULjn0q9uRGq5O4lAnaaPM=
+=o0Zw
 -----END PGP SIGNATURE-----
