@@ -6,20 +6,22 @@ AUX sxiv-1.2-makefile.patch 487 SHA256 47889092fc29b39364f5ed70723ba16df4791f0ee
 AUX sxiv-1.3-makefile.patch 778 SHA256 b06b8ebeca736c71e1fe016884ae2ed547b06a35c790b2751f6747ab6b95cb33 SHA512 be42f02350d553e05df815a7fee734113e62a00750d1c281348e3e72112ce67f025c81e4cbb5004920a850b0c93aee60612cd6659ffc635a81ee0548898c1d0e WHIRLPOOL c95817a73949d91406c0898c60a46de0965d8ba4d8c185ce8a707962cb0a30fe845396d31384e93e1677081e5c97172b58ac58af867f513fa787e119ed6eca36
 DIST sxiv-1.1.1.tar.gz 37251 SHA256 30569b7cb1568a7f60d102f6eb21f25c93de42243a1c8ac3c1a521d58b08281f SHA512 066264b3388114b022d11377c3dae5b04d5f4d6916c78276c478550f3194e0dc80cd8158a366689d4415cef94521ad018b5183dd2ae66c320770033b082094ad WHIRLPOOL 65e643a1f6aad84aa06bf7373ad74409dd552dbeb16ae961711341f8b5d7a1861d4142f8b80536e31f09c8a56130ea06c8ce501819cdfe9dd55af766ac925f6b
 DIST sxiv-1.2.tar.gz 47775 SHA256 ac76b69e4889137f2ce531ec4dc5ce9c4916bc575a30d351ebc7b0a684ef8cf3 SHA512 6058a8f89c540083549d91fe469f8f9d1a4acf60a19dc1d7115b7fe9a807143c9f8c0e8320e7695f7b6afe8d9ae040e9daaa09a976219228afb929133c8a6957 WHIRLPOOL f610805192379c31bd682c32c41a04ccf5e15aee1604577810df0e6a4ef21283635da92ce6c20c6f063f9da3e96611947341ca8e4e33f4714a5142315fd41334
+DIST sxiv-1.3.1.tar.gz 47171 SHA256 9a30a1b036e1c17212128554709da3f2d65d3beaef2e0a73097af5e35cf11d0e SHA512 a3ffeea7fb85188c844ec8fabf8a162aa6c4f695674b44db7c60a4608956051ff5963cb85aba86cd4f16ab63a0cf84cd2309c325e22075537175bf1b65327b77 WHIRLPOOL c38815c882a198152bde4c6b4a790ddcfb8a895a1cb1be20a2cb384d3c22a3bded2c50534a9ba9fc2633cc6f7d4ce3f153f1b6004b33725b3a40e3117070a425
 DIST sxiv-1.3.tar.gz 48995 SHA256 4c9d6dfa0c914ea20a80dff6cb376834ab1c765623496b8266f6a882a6b80708 SHA512 ca7ea9894808b1ba2752d7b53701cf2c6c8039eb170aa9e0ee6c2b90743f20870670d986a9a7465d230f6c1e6a05bc40bebd7f8b1151066cbabe8da1a937e828 WHIRLPOOL 5c4fc1d7628cdcaf205f626587975d7a14cc6379163fa3b13110f8ac8633ce0c8aa8939141b52fb212dfe24ef3875f9e94569eb624a245c3509984c3b2482a16
 EBUILD sxiv-1.1.1.ebuild 791 SHA256 cb07e90f277e383d78453e713975f83748301eb56c41ac7c098453eda874fc81 SHA512 dd8fc8e3e31fdb9ebeaccd989ae0bf0404a73e0228c8f05fb2bdc7f6f1684a18916080f609580d7495ab85a10db71fa5d4489b77cee7d83389c0410db1990d02 WHIRLPOOL ba64e1b865e51521ac6574d538307a0f57800d2399d6fbd6ef973544b947f501a2aa212a6a324c32bab34e1c833c88b391a93ba83f4557866bd53a410c653ea9
 EBUILD sxiv-1.2.ebuild 792 SHA256 4c4c890fb74d2dbd17a75c5f408a46a75ece919e30916c2aec8eae5c25a3bc30 SHA512 e3b11a84486331a56f9f34b88983b00396167264ee1f1ed69923d14e72ced93236714c3146af1b002aae60d4f683f75e09fbab05b66c2bab95e4e394fb9c6936 WHIRLPOOL a7e6aacb1797b1bf77a784de5ae0178c05dc3e78e9801c7c2656b27c92476c2740be3b9ce6b2719606e0910150a6e1ecdb3c01785c07aa230435a95690a0bf5d
+EBUILD sxiv-1.3.1.ebuild 806 SHA256 9da517f19c8e710dc9a1e35654f0310fd0b8b2c0a2058d810eea9775f22fd000 SHA512 f0e58167540518d36724b195629533169446797b72cdfa72cc77567f73a559944b7c5473866213792f7c894f9f808f19d722df1fc06ae2c46e0d548b7e37a1a2 WHIRLPOOL 89f5e2c967ce4a58d5b1ae177a25b5237dc37b1f4c76ac49f6b26dc7906e344406101f1ca7a4950583562aafbfc8643553abe0ed15e428b0f58ddc33fc9e8f74
 EBUILD sxiv-1.3.ebuild 815 SHA256 34cfd081252b8a8dbe06ce6a80a2bd4ed80f335e75bbd550b32a262c50867f2f SHA512 44167f4460d0146ee2e2420bcf0411c7beee0b3c99c560391c3b3c98f67bb4db08608b596377480375617934f0dd16caf99d9562a84a28058e57744f99d3508a WHIRLPOOL 682a1cb09572d4b036c72a14fb3312b23b16f614b7fc417f63b7c829211ea2b54fbcc1ceea7f79e67295ccba0e367e8e15670f133d735a394e13e307088adf57
-MISC ChangeLog 2919 SHA256 5c5acd7f7fa81019562004cb121a76b0615fa310d140b5759e12adfb1fcc121f SHA512 e764da7a4f6be25f6e5ca022078d1a3f05288d4f4d4f74c4d3834e1fc46d39b9ebebae67dbe2dee25b65d81168c636fd297e216aa7bacfbaa12b63c635d7de61 WHIRLPOOL e3ed12e0cfd8d8827fb4a612a9797583906476aea2f17506cb1335b7ebb2424f961421e6d6628b3508e4130a0521f5f4bce3effa7d594eedf256b262e4884c7a
+MISC ChangeLog 3032 SHA256 d32d7e3e8804e3161fc06781661b9ce6e1e76db7b3c3e7e266b0bb8bf57c659e SHA512 c2afbb46e5598e39a5d143552fc5179722f356fcac5971f08ac3a10c731c0ea0d1529db9d870427ad167a86f425f26edb59630ef76e20ed48c2586e4fca8e72c WHIRLPOOL ab4f842af814b346d47054277e58411b954a470c31919a19a84983b0cd6e651b350cdf09046cd4cccb5defa3478d519c209a9e664bb07b6e574c3e71e0067221
 MISC metadata.xml 163 SHA256 212655100c50c4193072996553f15984b9788fb20fb4175efd2418b80d428564 SHA512 ff4552bc5fce771795ba67e190fc9eb90ac70aaff219130e7ff9a36cde348cd4a771d8b61e158ce9390771d29e2e0ffe17618746ff1843b2af7322e0f21cdf2c WHIRLPOOL b0db778b8dab215f2790081db3d51586e43bbc790ab06f704ef4ddd6e83e90e53685d3483feff33ed1763945fca36e934e7813bff822713869d0d7f208678fb1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUS84/AAoJEEqz6FtPBkyjHkIH/2ABqFFWcU4V6C8rIQNNPIR8
-/wKhkjhrnEGBF6dLJFgxOtzicbdmmfp1yW9eG+HRj71tJHo++7xFWNQSvf9rFsxQ
-mPxC5s97lBWojeY+kIiWNJvbACC9F9v/l0nArTm6IF7hT/W44EbAdIpreZdXCdDm
-S0UEhdr9dLOcBvafdapGinbSReb6EAH8258AK4z7UnvejHuoC1D4W4kaMtwhf2XE
-jgH++oRI0fvEczRLa8I7EGbfcrZAexTPT/Cs7SWowTQk4tjnbQqcTeMOXoZt2iFh
-EpqRjNm0eh7m7VqXiXwzwGDvnEznfASfwn7m1QADM/GugV4a+PA8wc00FGu7Wgg=
-=yuQ0
+iQEcBAEBCAAGBQJUdtbqAAoJEEqz6FtPBkyjiYsH/iGS8JeD/M66Qbm3vIci9+FC
+PXVKbhB6VLQpeuqbNgXBFQqQejsejpGRgFvDjyVM4e0HBG6lALqGddABVb/ZDmPq
+EURvmEm7wKa92wmSioUP6mspDWxBFnnKfzohjkycoyxPS9l+Dh8mPfzPv185dthM
+OvmIf8rGMKLznReF/8+GxgP+9nsy6wzffPaczB7MZemLtGQNELEB/Hc/K1r4vBU3
+A+jrFNCn5oQ+v9wAc7mrB9lbx4bq0rStOZmKlnbXPIl76cMkSn4mkAofB0dEyeI4
+LnmC53DjVGJcgOmPTBqBOgLQMh4uhyqFtgkm9rvJC/shDP8SvwIWa8SK6AKchmQ=
+=U0+7
 -----END PGP SIGNATURE-----
