@@ -1,0 +1,37 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/sxiv/sxiv-1.3.1.ebuild,v 1.1 2014/11/27 07:46:42 radhermit Exp $
+
+EAPI=5
+
+inherit savedconfig toolchain-funcs
+
+DESCRIPTION="Simple (or small or suckless) X Image Viewer"
+HOMEPAGE="https://github.com/muennich/sxiv/"
+SRC_URI="https://github.com/muennich/sxiv/archive/v${PV}.tar.gz -> ${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+
+RDEPEND="
+	media-libs/libexif
+	media-libs/giflib
+	media-libs/imlib2[X]
+	x11-libs/libX11
+"
+DEPEND="${RDEPEND}"
+
+src_prepare() {
+	sed -i '/^LDFLAGS/d' Makefile || die
+	tc-export CC
+
+	restore_config config.h
+}
+
+src_install() {
+	emake DESTDIR="${ED}" PREFIX=/usr install
+	dodoc README.md
+
+	save_config config.h
+}
