@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/pngcrush
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pngcrush/ChangeLog,v 1.129 2014/11/08 03:41:30 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pngcrush/ChangeLog,v 1.130 2014/11/27 07:49:15 radhermit Exp $
+
+*pngcrush-1.7.81 (27 Nov 2014)
+
+  27 Nov 2014; Tim Harder <radhermit@gentoo.org> +pngcrush-1.7.81.ebuild:
+  Version bump.
 
 *pngcrush-1.7.80 (08 Nov 2014)
 
